--- a/client/src/app.html
+++ b/client/src/app.html
@@ -8,7 +8,7 @@
 	%sveltekit.head%
 </head>
 
-<body data-sveltekit-preload-data="hover" class="bg-neutral-900 text-zinc-50">
+<body data-sveltekit-preload-data="hover" class="">
 	<div style="display: contents">%sveltekit.body%</div>
 </body>
 
